# Satellite-Orbit-Determination

./: .gitignore  README.md
src/c++/: CMakeLists.txt  EKF_GEOS3.cpp  EKF_Global.h  EKF_Test.cpp  EKF_Test.h.gch  quartic.cpp
src/c++/include/: Accel.h  AccelHarmonic.h  AccelPointMass.h  AzElPa.h  Cheb3D.h  DEInteg.h  EqnEquinox.h  Frac.h  GHAMatrix.h  G_AccelHarmonic.h  Geodetic.h  IERS.h  JPL_Eph_DE430.h  LTC.h  Legendre.h  Matrix.h  MeanObliquity.h  MeasUpdate.h  Mjday.h  Mjday_TDB.h  NutAngles.h  NutMatrix.h  PoleMatrix.h  Position.h  PrecMatrix.h  R_x.h  R_y.h  R_z.h  SAT_Const.h  TimeUpdate.h  VarEqn.h  angl.h  anglesdr.h  anglesg.h  doubler.h  elements.h  gast.h  gibbs.h  gmst.h  hgibbs.h  (+3 more)
src/c++/src/: Accel.cpp  AccelHarmonic.cpp  AccelPointMass.cpp  AzElPa.cpp  Cheb3D.cpp  DEInteg.cpp  EqnEquinox.cpp  Frac.cpp  GHAMatrix.cpp  G_AccelHarmonic.cpp  Geodetic.cpp  IERS.cpp  JPL_Eph_DE430.cpp  LTC.cpp  Legendre.cpp  Matrix.cpp  MeanObliquity.cpp  MeasUpdate.cpp  Mjday.cpp  Mjday_TDB.cpp  NutAngles.cpp  NutMatrix.cpp  PoleMatrix.cpp  Position.cpp  PrecMatrix.cpp  R_x.cpp  R_y.cpp  R_z.cpp  TimeUpdate.cpp  VarEqn.cpp  angl.cpp  anglesdr.cpp  anglesg.cpp  doubler.cpp  elements.cpp  gast.cpp  gibbs.cpp  gmst.cpp  hgibbs.cpp  rpoly.cpp  (+5 more)
src/matlab/: Accel.m  AccelHarmonic.m  DEInteg.m  EKF_GEOS3.m  JPL_Eph_DE430.m  LTC.m  Legendre.m  VarEqn.m
