cmake_minimum_required(VERSION 3.28)
project(c__)

set(CMAKE_CXX_STANDARD 17)

add_executable(c__
        EKF_Test.cpp
        src/Mjday.cpp
        include/Mjday.h
        src/R_x.cpp
        include/R_x.h
        include/Matrix.h
        src/Matrix.cpp
        include/R_y.h
        src/R_y.cpp
        src/R_z.cpp
        include/R_z.h
        include/SAT_Const.h
        src/Legendre.cpp
        include/Legendre.h
        src/Frac.cpp
        include/Frac.h
        include/Frac.h
        src/NutAngles.cpp
        include/NutAngles.h
        src/Position.cpp
        include/Position.h
        src/AccelPointMass.cpp
        include/AccelPointMass.h
        src/Mjday_TDB.cpp
        include/Mjday_TDB.h
        src/MeanObliquity.cpp
        include/MeanObliquity.h
        src/AccelHarmonic.cpp
        include/AccelHarmonic.h
        src/Cheb3D.cpp
        include/Cheb3D.h
        src/IERS.cpp
        include/IERS.h
        src/timediff.cpp
        include/timediff.h
        src/AzElPa.cpp
        include/AzElPa.h
        src/MeasUpdate.cpp
        include/MeasUpdate.h
        src/TimeUpdate.cpp
        include/TimeUpdate.h
        src/unit.cpp
        include/unit.h
        src/sign_.cpp
        include/sign_.h
        src/EqnEquinox.cpp
        include/EqnEquinox.h
        src/gmst.cpp
        include/gmst.h
        src/gast.cpp
        include/gast.h
        src/JPL_Eph_DE430.cpp
        include/JPL_Eph_DE430.h
        src/G_AccelHarmonic.cpp
        include/G_AccelHarmonic.h
        src/LTC.cpp
        include/LTC.h
        src/NutMatrix.cpp
        include/NutMatrix.h
        src/PoleMatrix.cpp
        include/PoleMatrix.h
        src/PrecMatrix.cpp
        include/PrecMatrix.h
        src/GHAMatrix.cpp
        include/GHAMatrix.h
        src/Geodetic.cpp
        include/Geodetic.h
        src/VarEqn.cpp
        include/VarEqn.h
        EKF_Global.h
        src/Accel.cpp
        include/Accel.h
        src/DEInteg.cpp
        include/DEInteg.h
        src/angl.cpp
        include/angl.h
        src/gibbs.cpp
        include/gibbs.h
        src/elements.cpp
        include/elements.h
        src/hgibbs.cpp
        include/hgibbs.h
        src/anglesg.cpp
        include/anglesg.h
        src/rpoly.cpp
        include/rpoly.h
        src/vector.cpp
        src/vector.h
        src/doubler.cpp
)
add_executable(GEOS3
        EKF_GEOS3.cpp
        src/Mjday.cpp
        include/Mjday.h
        src/R_x.cpp
        include/R_x.h
        include/Matrix.h
        src/Matrix.cpp
        include/R_y.h
        src/R_y.cpp
        src/R_z.cpp
        include/R_z.h
        include/SAT_Const.h
        src/Legendre.cpp
        include/Legendre.h
        src/Frac.cpp
        include/Frac.h
        include/Frac.h
        src/NutAngles.cpp
        include/NutAngles.h
        src/Position.cpp
        include/Position.h
        src/AccelPointMass.cpp
        include/AccelPointMass.h
        src/Mjday_TDB.cpp
        include/Mjday_TDB.h
        src/MeanObliquity.cpp
        include/MeanObliquity.h
        src/AccelHarmonic.cpp
        include/AccelHarmonic.h
        src/Cheb3D.cpp
        include/Cheb3D.h
        src/IERS.cpp
        include/IERS.h
        src/timediff.cpp
        include/timediff.h
        src/AzElPa.cpp
        include/AzElPa.h
        src/MeasUpdate.cpp
        include/MeasUpdate.h
        src/TimeUpdate.cpp
        include/TimeUpdate.h
        src/unit.cpp
        include/unit.h
        src/sign_.cpp
        include/sign_.h
        src/EqnEquinox.cpp
        include/EqnEquinox.h
        src/gmst.cpp
        include/gmst.h
        src/gast.cpp
        include/gast.h
        src/JPL_Eph_DE430.cpp
        include/JPL_Eph_DE430.h
        src/G_AccelHarmonic.cpp
        include/G_AccelHarmonic.h
        src/LTC.cpp
        include/LTC.h
        src/NutMatrix.cpp
        include/NutMatrix.h
        src/PoleMatrix.cpp
        include/PoleMatrix.h
        src/PrecMatrix.cpp
        include/PrecMatrix.h
        src/GHAMatrix.cpp
        include/GHAMatrix.h
        src/Geodetic.cpp
        include/Geodetic.h
        src/VarEqn.cpp
        include/VarEqn.h
        EKF_Global.h
        src/Accel.cpp
        include/Accel.h
        src/DEInteg.cpp
        include/DEInteg.h
        src/angl.cpp
        include/angl.h
        src/gibbs.cpp
        include/gibbs.h
        src/elements.cpp
        include/elements.h
        src/hgibbs.cpp
        include/hgibbs.h
        src/anglesg.cpp
        include/anglesg.h
        src/rpoly.cpp
        include/rpoly.h
        src/vector.cpp
        src/vector.h
)

add_executable(poly
        quartic.cpp
        src/rpoly.cpp
        include/rpoly.h
)